work on character create and tests
